plugins/kotlin/idea/tests/testData/highlighterMetaInfo/Object.kt.highlighting
// FIR_IDENTICAL
package testing

object <!HIGHLIGHTING("textAttributesKey='KOTLIN_OBJECT'")!>O<!> {
    fun <!HIGHLIGHTING("textAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>foo<!>() = 42
}

fun <!HIGHLIGHTING("textAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>testing<!>(): <!HIGHLIGHTING("textAttributesKey='KOTLIN_OBJECT'")!>O<!> {
    <!HIGHLIGHTING("textAttributesKey='KOTLIN_OBJECT'")!>O<!>.<!HIGHLIGHTING("textAttributesKey='KOTLIN_FUNCTION_CALL'")!>foo<!>()
    val <!HIGHLIGHTING("textAttributesKey='KOTLIN_LOCAL_VARIABLE'")!>o<!> = <!HIGHLIGHTING("textAttributesKey='KOTLIN_OBJECT'")!>O<!>
    <!HIGHLIGHTING("textAttributesKey='KOTLIN_LOCAL_VARIABLE'")!>o<!>.<!HIGHLIGHTING("textAttributesKey='KOTLIN_FUNCTION_CALL'")!>foo<!>()
    return <!HIGHLIGHTING("textAttributesKey='KOTLIN_OBJECT'")!>O<!>
}
